# reply-card-corrector

./: .gitignore  Pipfile  pyproject.toml
ENEM_reply_card_corrector/: corrector.py  functions.py
SIMULINHO_reply_card_corrector/: functions.py
UDESC_reply_card_corrector/: functions.py
src/: __init__.py
src/ENEM_reply_card_corrector/: enem.py
src/SIMULINHO_reply_card_corrector/: corrector.py  functions.py  ps_60q.py
src/UDESC_reply_card_corrector/: corrector.py
src/UFSC_reply_card_corrector/: corrector.py  functions.py
src/auxilio/: escanear.py  funcoes_auxiliares.py  get_coordenadas.py  path.py  template.py  variaveis.py
src/leitura_e_escrita/: escritor.py  leitor.py
